github-actions-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-actions-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-actions-runner
  template:
    metadata:
      labels:
        app: github-actions-runner
    spec:
      containers:
        - name: github-actions-runner
          image: summerwind/actions-runner-controller:v0.27.6
