camunda-deployment-opostgress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-deployment
  labels:
    app: camunda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda
  template:
    metadata:
      labels:
        app: camunda
    spec:
      containers:
      - name: camunda
        image: camunda/camunda-bpm-platform:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: camunda-service
spec:
  type: NodePort
  selector:
    app: camunda
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000
