camunda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-nginx   # Ingress-Klasse hinzufügen
  rules:
  - host: cloud-hf-14.maas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: camunda-service
            port:
              number: 30000
